mobile off screen fix

--- a/CSS/reviews.css
+++ b/CSS/reviews.css
@@ -6,22 +6,31 @@
 {
 	#content h1{font-size: 20px;}
 	#content h2{font-size: 14px;}
-	  .column {
+	.row {padding:0px;}
+	.column {
     width: 100%;
-    padding-bottom: 5px;
+    margin-top:10px;
+    margin-bottom: 10px;
   }
   .testimonial{
 	width:100%;
 	padding-left: 0px;
 	padding-right:0px;
+	border-radius:0px;
   }
 }
 @media screen and (min-width: 769px)
 {
 	#content h1{font-size: 24px;}
 	#content h2{font-size: 16px;}
+	.row {padding-top:10px; padding-bottom:10px;}
 	.column{width: 50%;}
-	.testimonial{width: 90%;}
+	.testimonial{
+	 width: 90%;
+	 padding-left: 5px;
+	 padding-right:5px;
+	 border-radius: 5px;
+	}
 }
 @media screen and (min-width: 992px)
 {
@@ -63,8 +72,6 @@
 .row{
 	width: 100%;
 	background-color: #CCCECD;
-	padding-top: 5px;
-	padding-bottom:5px;
 }
 .column{
 	display: inline-block;
@@ -73,9 +80,6 @@
 
 .testimonial{
 	background-color: white;
-	padding-left: 5px;
-	padding-right:5px;
-	border-radius: 5px;
 	display: inline-block;
 	text-align: left;
 }
